--- a/Tools/unix/Makefile
+++ b/Tools/unix/Makefile
@@ -9,7 +9,7 @@ ifeq ($(UNAME), Darwin)
 	SUFFIX=osx
 endif
 
-SUBDIRS = bst uz80as zxcc cpmtools bin2asm lzsa
+SUBDIRS = OpenSpin uz80as zxcc cpmtools bin2asm lzsa
 
 all:
 	@chmod +x casefn.sh
