--- a/Source/HBIOS/Makefile.new
+++ b/Source/HBIOS/Makefile.new
@@ -9,7 +9,7 @@ DIST_OBJECTS := \
 #	RCZ80_mt RCZ80_duart MON_std 
 
 OBJECTS := $(DIST_OBJECTS)
-#OBJECTS := SBC_std MK4_std UNA_std S100_std
+OBJECTS := SBC_std MK4_std UNA_std S100_std
 OBJECTS := $(OBJECTS:=.rom) $(OBJECTS:=.com) $(OBJECTS:=.upd)
 OBJECTS := $(filter-out UNA_%.com UNA_%.upd,$(OBJECTS))
 
@@ -46,15 +46,13 @@ s100mon.bin:
 
 %.build.inc:
 	echo $@
-	cat <<-EOF >$@
-		; RomWBW Configured for $(*F) at $$(date +%Y-%m-%d)
-		;
-		#DEFINE	TIMESTAMP	"$$(date +%Y-%m-%d)"
-		#DEFINE CONFIG		"$(*F)"
-		;
-		#INCLUDE "Config/$(*F).asm"
-		;
-	EOF
+	echo "; RomWBW Configured for $(*F) at $$(date +%Y-%m-%d)" >>$@
+	echo ";" >>$@
+	echo "#DEFINE TIMESTAMP \"$$(date +%Y-%m-%d)\"" >>$@
+	echo "#DEFINE CONFIG \"$(*F)\"" >>$@
+	echo ";" >>$@
+	echo "#INCLUDE \"Config/$(*F).asm\"" >>$@
+	echo ";" >>$@
 	cat $@
 
 %.usrrom.bin: usrrom.asm %.build.inc ; $(BUILD_COMPONENT)
@@ -74,28 +72,28 @@ s100mon.bin:
 	$(ZXCC) $< >$@
 
 %.hbios_rom.bin: hbios.asm %.build.inc %.hbios_env.sh $(FONTS)
-	. ./$(*F).hbios_env.sh
-	TARGETS=("" "z80" "hd64180" "z280")
-	CPU=$${TARGETS[$$CPUFAM]}
-	cp $(*F).build.inc build.inc
-	$(BINDIR)/uz80as -t $$CPU -dROMBOOT $< $@ $(@:.bin=.lst)
-	srec_cat $@ -Binary -Crop 0 0x7FFF -Checksum_Negative_Big_Endian 0x7FFF 1 1 -o $@ -Binary
+	. ./$(*F).hbios_env.sh ; \
+	TARGETS=("" "z80" "hd64180" "z280") ; \
+	CPU=$${TARGETS[$$CPUFAM]} ; \
+	cp $(*F).build.inc build.inc ; \
+	$(BINDIR)/uz80as -t $$CPU -dROMBOOT $< $@ $(@:.bin=.lst) ; \
+	srec_cat $@ -Binary -Crop 0 0x7FFF -Checksum_Negative_Big_Endian 0x7FFF 1 1 -o $@ -Binary ; \
 	rm build.inc
 
 %.hbios_app.bin: hbios.asm %.build.inc %.hbios_env.sh $(FONTS)
-	. ./$(*F).hbios_env.sh
-	TARGETS=("" "z80" "hd64180" "z280")
-	CPU=$${TARGETS[$$CPUFAM]}
-	cp $(*F).build.inc build.inc
-	$(BINDIR)/uz80as -t $$CPU -dAPPBOOT $< $@ $(@:.bin=.lst)
+	. ./$(*F).hbios_env.sh ; \
+	TARGETS=("" "z80" "hd64180" "z280") ; \
+	CPU=$${TARGETS[$$CPUFAM]} ; \
+	cp $(*F).build.inc build.inc ; \
+	$(BINDIR)/uz80as -t $$CPU -dAPPBOOT $< $@ $(@:.bin=.lst) ; \
 	rm build.inc
-
-%.osimg.bin: %.romldr.bin %.dbgmon.bin
-	cat $(*F).romldr.bin $(*F).dbgmon.bin ../ZSDOS/zsys_wbw.bin ../CPM22/cpm_wbw.bin >$@
-	srec_cat $@ -Binary -Crop 0 0x7FFF -Checksum_Negative_Big_Endian 0x7FFF 1 1 -o $@ -Binary
 
 UNA_%.osimg.bin: UNA_%.romldr.bin UNA_%.dbgmon.bin
 	cat UNA_$(*F).romldr.bin UNA_$(*F).dbgmon.bin ../ZSDOS/zsys_una.bin ../CPM22/cpm_una.bin >$@
+	srec_cat $@ -Binary -Crop 0 0x7FFF -Checksum_Negative_Big_Endian 0x7FFF 1 1 -o $@ -Binary
+
+%.osimg.bin: %.romldr.bin %.dbgmon.bin
+	cat $(*F).romldr.bin $(*F).dbgmon.bin ../ZSDOS/zsys_wbw.bin ../CPM22/cpm_wbw.bin >$@
 	srec_cat $@ -Binary -Crop 0 0x7FFF -Checksum_Negative_Big_Endian 0x7FFF 1 1 -o $@ -Binary
 
 %.osimg_small.bin: %.romldr.bin %.dbgmon.bin
@@ -115,16 +113,16 @@ S100_%.imgpad2.bin: s100mon.bin
 	cp $< $@
 	srec_cat $@ -Binary -Crop 0 0x7FFF -Checksum_Negative_Big_Endian 0x7FFF 1 1 -o $@ -Binary
 
-%.rom: %.hbios_rom.bin %.osimg.bin %.osimg1.bin %.imgpad2.bin %.hbios_env.sh
-	. ./$(*F).hbios_env.sh
-	if [ $$ROMSIZE -gt 0 ] ; then RD="rom$$ROMSIZE" ; else RD="ram$$RAMSIZE" ; fi
-	cat $(*F).hbios_rom.bin $(*F).osimg.bin $(*F).osimg1.bin $(*F).imgpad2.bin ../RomDsk/$${RD}_wbw.dat >$@
-
 UNA_%.rom: UNA_%.osimg.bin UNA_%.hbios_env.sh
-	. ./UNA_$(*F).hbios_env.sh
-	cat ../UBIOS/UNA-BIOS.BIN UNA_$(*F).osimg.bin ../UBIOS/FSFAT.BIN ../RomDsk/rom$${ROMSIZE}_una.dat >$@
-	cp UNA_$(*F).osimg.bin $(DEST)/UNA_WBW_SYS.bin
+	. ./UNA_$(*F).hbios_env.sh ; \
+	cat ../UBIOS/UNA-BIOS.BIN UNA_$(*F).osimg.bin ../UBIOS/FSFAT.BIN ../RomDsk/rom$${ROMSIZE}_una.dat >$@ ; \
+	cp UNA_$(*F).osimg.bin $(DEST)/UNA_WBW_SYS.bin ; \
 	cp ../RomDsk/rom$${ROMSIZE}_una.dat $(DEST)/UNA_WBW_ROM$${ROMSIZE}.bin
+
+%.rom: %.hbios_rom.bin %.osimg.bin %.osimg1.bin %.imgpad2.bin %.hbios_env.sh
+	. ./$(*F).hbios_env.sh ; \
+	if [ $$ROMSIZE -gt 0 ] ; then RD="rom$$ROMSIZE" ; else RD="ram$$RAMSIZE" ; fi ; \
+	cat $(*F).hbios_rom.bin $(*F).osimg.bin $(*F).osimg1.bin $(*F).imgpad2.bin ../RomDsk/$${RD}_wbw.dat >$@
 
 %.com: %.hbios_app.bin %.osimg_small.bin
 	cat $(*F).hbios_app.bin $(*F).osimg_small.bin >$@
