Fix .gitignore (again)

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ Tools/unix/zx/zx
 !Source/BPBIOS/*.lib
 !Source/BPBIOS/Z34RCP11/cledinst.com
 !Source/BPBIOS/Z34RCP11/cledsave.com
+!Source/CPNET/**
 !Source/Fonts/*
 !Source/Images/**
 !Source/RomDsk/**
