--- a/Source/CPNET/Makefile
+++ b/Source/CPNET/Makefile
@@ -4,15 +4,15 @@ TOOLS = ../../Tools
 
 include $(TOOLS)/Makefile.inc
 
-ZXCC=../../$(TOOLS)/$(UNAME)/zxcc
-export CPMDIR80=../../$(TOOLS)/cpm/
-
 cpn12%.lbr: CPNETVER=cpnet12
 cpn3%.lbr: CPNETVER=cpnet3
 %mt.lbr: HWVER=mt011
 %duo.lbr: HWVER=duo
 
 %.lbr:
-	cd $(HWVER)/$(CPNETVER) ; \
-	$(ZXCC) NULU --O -$(*F) -\<30 --A -*.* --L --X ; \
-	mv $@ ../..
+	rm -f $@
+	$(ZXCC) NULU --O -$(*F) -\<30 --X
+	for f in `ls $(HWVER)/$(CPNETVER) | sort` ; \
+	do \
+	  $(ZXCC) NULU --O -$(*F) --A $(HWVER)/$(CPNETVER)/$$f --X ; \
+	done
