Add CP/NET Serial Interface Client Files
- Generic serial interface client support files have been added.  This mode of operation is not documented in the RomWBW User Guide.  Refer to <https://github.com/durgadas311/cpnet-z80>.
- Minor patch to NULU so it does not spit out a directory listing every time it is invoked.

--- a/Source/CPNET/Makefile
+++ b/Source/CPNET/Makefile
@@ -1,4 +1,4 @@
-OBJECTS = cpn12mt.lbr cpn3mt.lbr cpn12duo.lbr cpn3duo.lbr
+OBJECTS = cpn12mt.lbr cpn3mt.lbr cpn12duo.lbr cpn3duo.lbr cpn12ser.lbr cpn3ser.lbr
 DEST = ../../Binary/CPNET/
 TOOLS = ../../Tools
 
@@ -8,6 +8,7 @@ cpn12%.lbr: CPNETVER=cpnet12
 cpn3%.lbr: CPNETVER=cpnet3
 %mt.lbr: HWVER=mt011
 %duo.lbr: HWVER=duo
+%ser.lbr: HWVER=serial
 
 %.lbr:
 	rm -f $@
