ez80: implemented timer get/set function - delegates to firmware

--- a/Source/RomDsk/Makefile
+++ b/Source/RomDsk/Makefile
@@ -6,8 +6,8 @@ include $(TOOLS)/Makefile.inc
 
 .SHELLFLAGS = -ce
 
-ROMAPPS1 := assign mode rtc syscopy xm ../../Source/Images/Common/All/WDATE
-ROMAPPS2 := fdu format survey sysgen talk timer cpuspd
+ROMAPPS1 := assign mode rtc syscopy xm
+ROMAPPS2 := fdu format survey sysgen talk cpuspd
 
 rom128_%.dat: DISKDEF=wbw_rom128
 rom256_%.dat: DISKDEF=wbw_rom256
