Minor Cosmetic Improvements

--- a/Source/Doc/Makefile
+++ b/Source/Doc/Makefile
@@ -1,10 +1,13 @@
 #
-# NOTE: gpp, Pandoc, and Latex (MiKTeX or TexLive) must be installed
+# NOTE: gpp, Pandoc, LuaLatex (MiKTeX or TexLive), and Roboto Font must be installed
 # and available on commandline for this build to work!!!
-# Typically "sudo apt install gpp pandoc texlive-latex-extra texlive-luatex texlive-fonts-extra fonts-roboto"
-# On Macintosh
+#
+# On MacOS:
 # brew install gpp pandoc texlive
 # brew install --cask font-roboto
+#
+# On Ubuntu Linux:
+# apt install gpp pandoc texlive texlive-luatex texlive-fonts-extra
 #
 OBJECTS = ReadMe.gfm ReadMe.txt UserGuide.pdf SystemGuide.pdf Applications.pdf Catalog.pdf Errata.pdf
 # DEST = ../../Doc
@@ -40,4 +43,4 @@ deploy :
 	cp SystemGuide.pdf       "../../Doc/RomWBW System Guide.pdf"
 	cp Applications.pdf      "../../Doc/RomWBW Applications.pdf"
 	cp Catalog.pdf           "../../Doc/RomWBW Disk Catalog.pdf"
-	cp Errata.pdf             "../../Doc/RomWBW Errata.pdf"
+	cp Errata.pdf            "../../Doc/RomWBW Errata.pdf"
