ch376-native: fixes

--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,9 @@ Tools/unix/OpenSpin/build/
 Tools/unix/zxcc/config.h
 Tools/unix/zxcc/zxcc
 Binary/Apps/bbcbasic.txt
+
+Source/Images/hd1k_msxroms1.img
+Source/Images/hd1k_msxroms1.img
+Source/Images/hd1k_msxroms2.img
+Source/Images/hd512_msxroms1.img
+Source/Images/hd512_msxroms2.img
