--- a/Source/Images/Makefile
+++ b/Source/Images/Makefile
@@ -5,6 +5,7 @@ SYSTEMS = ../CPM22/cpm_wbw.sys ../ZSDOS/zsys_wbw.sys ../QPM/qpm_wbw.sys ../CPM3/
 
 FDIMGS = fd144_cpm22.img fd144_zsdos.img fd144_nzcom.img \
 	fd144_cpm3.img fd144_zpm3.img fd144_ws4.img fd144_qpm.img \
+	fd144_z3plus.img \
 	fd144_z80asm.img fd144_aztecc.img fd144_hitechc.img \
 	fd144_bascomp.img fd144_fortran.img fd144_games.img \
 	fd144_tpascal.img fd144_cowgol.img
@@ -13,6 +14,7 @@ HD512IMGS = hd512_cpm22.img hd512_zsdos.img hd512_nzcom.img \
 HD512XIMGS = hd512_z80asm.img hd512_aztecc.img hd512_hitechc.img \
 	hd512_bascomp.img hd512_fortran.img hd512_games.img \
 	hd512_tpascal.img hd512_dos65.img hd512_qpm.img \
+	hd512_z3plus.img \
 	hd512_cowgol.img hd512_msxroms1.img hd512_msxroms2.img \
 	hd512_blank.img
 HD1KIMGS = hd1k_cpm22.img hd1k_zsdos.img hd1k_nzcom.img \
@@ -20,6 +22,7 @@ HD1KIMGS = hd1k_cpm22.img hd1k_zsdos.img hd1k_nzcom.img \
 HD1KXIMGS = hd1k_z80asm.img hd1k_aztecc.img hd1k_hitechc.img \
 	hd1k_bascomp.img hd1k_fortran.img hd1k_games.img \
 	hd1k_tpascal.img hd1k_qpm.img \
+	hd1k_z3plus.img \
 	hd1k_cowgol.img hd1k_msxroms1.img hd1k_msxroms2.img \
 	hd1k_blank.img
 HD1KXIMGS += hd1k_bp.img
@@ -85,7 +88,7 @@ blankhd1k:
 		(*cpm22*) sys=../CPM22/cpm_wbw.sys;; \
 		(*qpm*) sys=../QPM/qpm_wbw.sys;; \
 		(*zsdos* | *nzcom* | *dos65* | *bp*) sys=../ZSDOS/zsys_wbw.sys;; \
-		(*cpm3*) sys=../CPM3/cpmldr.sys;; \
+		(*cpm3* | *z3plus*) sys=../CPM3/cpmldr.sys;; \
 		(*zpm3*) sys=../ZPM3/zpmldr.sys;; \
 	esac ; \
 	if echo $@ | grep -q ^fd144_ ; then \
