--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           export TZ='America/Los_Angeles'
           sudo apt-get install srecord
-          time make distlog
+          make distlog
           rm -rf .git*
 
       - name: List Output
@@ -58,7 +58,7 @@ jobs:
         run: |
           export TZ='America/Los_Angeles'
           brew install srecord
-          time make distlog
+          make distlog
           rm -rf .git*
 
       - name: List Output
