Documentation New Introduction and Hardware documents with content moved from User Guide

--- a/Source/Doc/Makefile
+++ b/Source/Doc/Makefile
@@ -9,7 +9,7 @@
 # On Ubuntu Linux:
 # apt install gpp pandoc texlive texlive-luatex texlive-fonts-extra
 #
-OBJECTS = ReadMe.gfm ReadMe.txt UserGuide.pdf SystemGuide.pdf Applications.pdf Catalog.pdf Errata.pdf
+OBJECTS = ReadMe.gfm ReadMe.txt Introduction.pdf UserGuide.pdf SystemGuide.pdf Applications.pdf Catalog.pdf Hardware.pdf
 # DEST = ../../Doc
 TOOLS = ../../Tools
 OTHERS = *.tmp
@@ -39,8 +39,9 @@ all :: deploy
 deploy :
 	cp ReadMe.gfm            "../../ReadMe.md"
 	cp ReadMe.txt            "../../ReadMe.txt"
+	cp Introduction.pdf      "../../Doc/RomWBW Introduction.pdf"
 	cp UserGuide.pdf         "../../Doc/RomWBW User Guide.pdf"
 	cp SystemGuide.pdf       "../../Doc/RomWBW System Guide.pdf"
 	cp Applications.pdf      "../../Doc/RomWBW Applications.pdf"
 	cp Catalog.pdf           "../../Doc/RomWBW Disk Catalog.pdf"
-	cp Errata.pdf            "../../Doc/RomWBW Errata.pdf"
+	cp Hardware.pdf          "../../Doc/RomWBW Hardware.pdf"
