Use Introduction for ReadMe
See Discussion Documentation 3.5 Improvement #493

--- a/Source/Doc/Makefile
+++ b/Source/Doc/Makefile
@@ -9,7 +9,7 @@
 # On Ubuntu Linux:
 # apt install gpp pandoc texlive texlive-luatex texlive-fonts-extra
 #
-OBJECTS = ReadMe.gfm ReadMe.txt Introduction.pdf UserGuide.pdf SystemGuide.pdf Applications.pdf Catalog.pdf Hardware.pdf
+OBJECTS = Introduction.gfm Introduction.txt Introduction.pdf UserGuide.pdf SystemGuide.pdf Applications.pdf Catalog.pdf Hardware.pdf
 # DEST = ../../Doc
 TOOLS = ../../Tools
 OTHERS = *.tmp
@@ -37,8 +37,8 @@ all :: deploy
 	pandoc $< -f markdown -t plain -s -o $@ --default-image-extension=pdf
 
 deploy :
-	cp ReadMe.gfm            "../../ReadMe.md"
-	cp ReadMe.txt            "../../ReadMe.txt"
+	cp Introduction.gfm      "../../ReadMe.md"
+	cp Introduction.txt      "../../ReadMe.txt"
 	cp Introduction.pdf      "../../Doc/RomWBW Introduction.pdf"
 	cp UserGuide.pdf         "../../Doc/RomWBW User Guide.pdf"
 	cp SystemGuide.pdf       "../../Doc/RomWBW System Guide.pdf"
