ch376-native: extended CHNATIVEFORCE option to wait upto approx 5 seconds for at least one connected device

--- a/Source/HBIOS/ch376-native/Makefile
+++ b/Source/HBIOS/ch376-native/Makefile
@@ -46,6 +46,7 @@ clean:
 	rm base-drv.s
 	rm keyboard.s
 
+.PRECIOUS: $(ASSDIR)%.c.asm
 $(ASSDIR)%.c.s: $(ASSDIR)%.c.asm
 	@mkdir -p $(dir $@)
 	echo "Converting $< to $@"
