Add Peter Onion's ZDE ANSI Keyboard Support
- Added new ANSI keyboard support from Peter Onion.
- ZDE is now built as part of the RomWBW build itself.
- Did not yet include support for modified ZDE escape character.
- See <https://groups.google.com/g/rc2014-z80/c/hAZen3pZb7o>

Co-Authored-By: PeterOGB <7755057+peterogb@users.noreply.github.com>

--- a/Binary/Apps/Makefile
+++ b/Binary/Apps/Makefile
@@ -1,6 +1,6 @@
 TOOLS = ../../Tools
 MOREDIFF := $(shell $(TOOLS)/unix/casefn.sh *.com)
-SUBDIRS = Test
+SUBDIRS = Test ZDE
 
 include $(TOOLS)/Makefile.inc
 
