--- a/Source/Apps/Makefile
+++ b/Source/Apps/Makefile
@@ -1,5 +1,5 @@
 SUBDIRS = HTalk XM FDU FAT Tune Test ZMP ZMD Dev VGM cpuspd reboot Survey BBCBASIC copysl \
-	sysgen syscopy assign format talk mode rtc timer
+	sysgen syscopy assign format talk mode rtc timer ZDE
 TOOLS =../../Tools
 
 include $(TOOLS)/Makefile.inc
