ch376-native: refactor: moved drive index tracking logic out of drivers into usb framework

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
     "usb-base-drv.h": "c",
     "critical-section.h": "c",
     "enumerate.h": "c",
-    "ch376inc.h": "c"
+    "ch376inc.h": "c",
+    "enumerate_storage.h": "c",
+    "work-area.h": "c"
   }
 }
