ch376-native: refactor: separating driver state and hbios state

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "enumerate.h": "c",
     "ch376inc.h": "c",
     "enumerate_storage.h": "c",
-    "work-area.h": "c"
+    "work-area.h": "c",
+    "hbios-driver-storage.h": "c"
   }
 }
